2006-01-11  Sebastien Bacher  <seb128@debian.org>

	reviewed by: Bastien Nocera <hadess@hadess.net>

	* actions/acme-fb-level.c: (acme_fblevel_error_quark),
	(acme_fblevel_new):
	* actions/acme-fb-level.h:
	* gnome-settings-multimedia-keys.c:
	(gnome_settings_multimedia_keys_load):
	cleanup messages about pmu on powerbook,
	patch by Jeroen Zwartepoorte <jeroen.zwartepoorte@gmail.com>
	(Closes: #132655)

2006-01-11  Sebastien Bacher  <seb128@debian.org>

	* actions/acme.h:
	* gnome-settings-multimedia-keys.c: (update_kbd_cb), (init_kbd),
	(acme_filter_events):
	drop the keysym/keycode binding code, it's an hack and 
	doesn't work fine, patch by Bastien Nocera <hadess@hadess.net>
	(Closes: #133815)	

2006-01-11  Scott Reeves <SReeves@novell.com>

	* gnome-settings-sound.c (reload_foreach_cb): only disable sounds
	for system events.
	(apply_settings): ditto.

2006-01-03  Łukasz Stelmach <stlman@poczta.fm>

	Fixes #320727

	* xrdb/Emacs.ad: added more settings to make Emacs' UI mimic better
	GNOME's look & feel.

2006-01-03  jenglish <jenglish@flightlab.com>

	Fixes #130299

	* xrdb/Tk.ad: restores prelight/active/mouse-over feedback for Tk
	buttons, checkbuttons, scrollbars, etc.

2005-12-14  Matthias Clasen  <mclasen@redhat.com>

	Fixes #323895
	
	* gnome-settings-xsettings.c: Support the symbolic colors setting
	in GTK+ 2.10.  

2005-12-12  Philippe Troin <phil@fifi.org>

	Fixes #323690

	* gnome-settings-multimedia-keys.c (update_kbd_cb, init_kbd): don't
	grab keyboard when invalid keys are present in the GConf database.
	
2005-11-21  Jens Granseuer <jensgr@gmx.net>

	Fixes #321778

	* gnome-settings-daemon/gnome-settings-keyboard.c
	(numlock_set_xkb_state, numlock_get_gconf_state): C89 compilation
	fixes.

2005-11-14  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-xsettings.c:
	define "Gtk/ShowInputMethodMenu"/"Gtk/ShowUnicodeMenu" xsettings,
	patch by Matthias Clasen (Closes: #319634).
	
2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>
