@@ -1,3 +1,11 @@
+2006-01-14  Rodney Dawes  <dobey@novell.com>
+
+	* gnome-settings-xsettings.c (xsettings_callback):
+	(gnome_settings_xsettings_load): Set the Net/FallbackIconTheme
+	XSetting for new versions of gnome-icon-theme and gtk+ >= 2.8.10
+
+	See bug #325546
+
 2006-01-11  Sebastien Bacher  <seb128@debian.org>
 
 	reviewed by: Bastien Nocera <hadess@hadess.net>
